--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,18 +1,19 @@
 .btn {
   display: inline-flex;
-  padding: 10px 20px;
+  padding: 4px 4px 4px 30px;
 
-  color: $color-default-white;
+  color: $color-cerulean-blue;
 
-  background-color: $color-neon-blue;
+  background-color: $color-default-white;
   border: none;
   cursor: pointer;
+  box-shadow: inset 0 0 0 1px $color-cerulean-blue;
 
   transition: opacity $trans-default;
 
-  &--red {
+  /*&--red {
     background-color: $color-torch-red;
-  }
+  }*/
 
   &:disabled {
     opacity: 0.5;
