--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,9 +19,11 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/data-accordion";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
+@import "blocks/main-header";
 @import "blocks/custom-select";
 
 // ---------------------------------
