--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,9 @@ $color-torch-red:                   #ff1553;
 
 $color-charcoal:                    #484848;
 $color-cerulean-blue:               #316dc2;
+$color-alabaster:                   #f0efe9;
+$color-mischka:                     #a9afb7;
+
 
 // Gradient
 
