--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $color-charcoal:                    #484848;
 $color-cerulean-blue:               #316dc2;
 $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
+$color-black-pearl:                 #0d1d33;
 
 
 // Gradient
