--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -25,6 +25,10 @@
 .main-header__logo {
   margin-right: 20px;
   transition: all $trans-default;
+  display: inline-flex;
+  /*display: flex;
+  align-items: center;
+  justify-content: center;*/
   //position: relative;
 
   &:hover,
