--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,6 +18,7 @@ $color-cerulean-blue:               #316dc2;
 $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
 $color-black-pearl:                 #0d1d33;
+$color-endeavour:                   #275699;
 
 
 // Gradient
