--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,8 +23,10 @@
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
+@import "blocks/main-footer";
 @import "blocks/main-header";
 @import "blocks/custom-select";
+@import "blocks/social";
 
 // ---------------------------------
 
