--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -20,6 +20,7 @@
   // flex-wrap: wrap;
   justify-content: space-between;
   align-items: start;
+  position: relative;
 }
 
 .main-header__logo {
@@ -50,10 +51,15 @@
     pointer-events: none;
   }
 
-  /*.is-open & {
-    z-index: -1;
-    pointer-events: none;
-  }*/
+  .is-open & {
+    // z-index: -1;
+    // pointer-events: none;
+
+    @include vp-767 {
+      margin: 0;
+      transform: scale(0);
+    }
+  }
 }
 
 .main-header__logo img {
@@ -62,6 +68,14 @@
 
 .main-header__nav {
   margin-left: 20px;
+
+  .is-open & {
+    @include vp-767 {
+      margin: 0;
+      position: absolute;
+      width: 100%;
+    }
+  }
 }
 
 .main-header__button {
@@ -164,6 +178,14 @@
         color: rgba($color-default-white, 0.7);
       }
     }
+
+    @include vp-767 {
+      width: 100%;
+      /*display: flex;
+      justify-content: space-between;
+      gap: 20px;*/
+      gap: 76.69%;
+    }
   }
 }
 
@@ -250,7 +272,13 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 28px;
-  padding: 35px 25px;
+
+  transform: scale(0);
+
+  .is-open & {
+    padding: 35px 25px;
+    transform: scale(1);
+  }
 }
 
 .main-header__link {
