--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -7,6 +7,7 @@
   left: 0;
   background-color: $color-transparent;
   transition: background-color $trans-default;
+  z-index: 2;
 
   &.is-open {
     background-color: rgba($color-black-pearl, 0.4);
