--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 
 @import "blocks/btn";
 @import "blocks/data-accordion";
+@import "blocks/hero";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
