--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,9 @@ $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
 $color-black-pearl:                 #0d1d33;
 $color-endeavour:                   #275699;
+$color-echo-blue:                   #a3acc1;
+$color-grey-nickel:                 #b7b5af;
+$color-hawkes-blue:                 #d6e2f3;
 
 
 // Gradient
