--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -23,7 +23,7 @@
 
   span {
     display: block;
-    margin-top: 18px;
+    margin-top: 16px;
   }
 
   div {
@@ -86,6 +86,24 @@
 
     svg {
       color: rgba($color-default-white, 0.6);
+    }
+  }
+
+  @include vp-767 {
+    padding: 4px 4px 4px 20px;
+    font-size: 12px;
+    line-height: 12px;
+    grid-template-columns: min-content 34px;
+    gap: 20px;
+
+    span {
+      margin-top: 12px;
+    }
+
+    div {
+      width: 34px;
+      height: 34px;
+      padding: 12px;
     }
   }
 }
