--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -6,10 +6,13 @@
 }
 
 .hero__slide {
-  // height: auto;
+  height: auto;
   padding: 409px 0 60px 0;
   // overflow: hidden;
   min-height: 55.56vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 
   @include vp-1199 {
     padding: 676px 0 60px 0;
@@ -38,7 +41,7 @@
   left: 0;
 
   width: 100vw;
-  height: 55.56vw;
+  height: 100%;
   z-index: 1;
 
   &::before {
@@ -57,6 +60,7 @@
 .hero__image-wrapper img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 .hero__slide-wrapper {
@@ -79,13 +83,13 @@
   min-width: 320px;
   max-width: 1240px; */
   // margin: 0 auto;
-  padding: 14px 20px;
+  padding: 14px 20px 15px 20px;
 
   &::before {
     content: "";
     position: absolute;
     bottom: 0;
-    right: -20px;
+    right: -19px;
 
     width: 20px;
     height: 20px;
@@ -93,19 +97,31 @@
     background-color: $color-transparent;
     background-image: url("../img/svg/angle-bottom.svg");
     background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @include vp-1199 {
+    &::before {
+      right: -20px;
+      width: 20px;
+      height: 21px;
+    }
   }
 
   @include vp-767 {
-    padding: 10px 16px;
+    padding: 10px 16px 11px 16px;
     border-radius: 12px 12px 0 0;
 
     &::before {
-      right: -10px;
-
-      width: 10px;
-      height: 10px;
+      right: -11px;
+      width: 11px;
+      height: 11px;
     }
   }
+}
+
+.hero__pagination {
+  display: flex;
 }
 
 
@@ -165,7 +181,7 @@
 
 .hero__slide-wrapper h2 {
   width: 78.06%;
-  margin: 0;
+  margin: -1px 0 0 0;
   padding: 40px 50px 30px 50px;
 
   font-size: 54px;
@@ -177,7 +193,7 @@
 
   @include vp-1199 {
     width: 97.2%;
-    padding: 30px 40px 24px 40px;
+    padding: 31px 40px 23px 40px;
     font-size: 36px;
     line-height: 44px;
     border-radius: 0 30px 30px 0;
@@ -185,7 +201,7 @@
 
   @include vp-767 {
     width: 100%;
-    padding: 20px 14px 16px 20px;
+    padding: 20px 14px 16px 14px;
     font-size: 22px;
     line-height: 26px;
     border-radius: 0 16px 16px 0;
@@ -194,7 +210,7 @@
 
 .hero__info {
   width: 62.26%;
-  padding: 0 50px 35px 50px;
+  padding: 0 50px 28px 50px;
 
   background-color: $color-default-white;
   border-radius: 0 0 30px 30px;
@@ -203,34 +219,46 @@
   gap: 30px;
   align-items: start;
   position: relative;
+  margin-top: -7px;
 // гдк-то здесь
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    right: -26px;
-
+    top: 6px;
+    right: -25px;
     width: 26px;
     height: 26px;
 
     background-color: $color-transparent;
     background-image: url("../img/svg/angle-top.svg");
     background-repeat: no-repeat;
+    background-size: cover;
   }
 
   @include vp-1199 {
     width: 87.17%;
-    padding: 0 40px 35px 40px;
+    padding: 0 40px 32px 40px;
+    margin-top: -4px;
+
+    &::before {
+      display: none;
+    }
   }
 
   @include vp-767 {
     width: 90%;
-    padding: 0 14px 15px 14px;
-
-    border-radius: 0 0 14px 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: none;
+    border-radius: 0;
+    margin-top: -5px;
+    background-color: $color-transparent;
+    gap: 0;
 
     &::before {
-      display: none;
+      width: 10px;
+      height: 10px;
     }
   }
 }
@@ -238,8 +266,6 @@
 .hero__info p {
   // width: 57.77%;
   margin: 0;
-
-  background-color: $color-default-white;
 
   @include vp-1199 {
     // width: 48.22%;
@@ -250,10 +276,57 @@
   @include vp-767 {
     // width: 100%;
     font-size: 14px;
-    padding: 0 14px 15px 14px;
+    padding: 0 14px 10px 14px;
+    background-color: $color-default-white;
+    border-radius: 0 0 14px 0;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      right: -10px;
+      width: 10px;
+      height: 10px;
+
+      background-color: $color-transparent;
+      background-image: url("../img/svg/angle-top.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+}
+
+.hero__link-wrapper {
+  @include vp-767 {
+    padding: 6px 15px 10px 15px;
+    background-color: $color-default-white;
+    border-radius: 0 0 14px 14px;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: -10px;
+      width: 10px;
+      height: 10px;
+
+      background-color: $color-transparent;
+      background-image: url("../img/svg/angle-top.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 }
 
 .hero__link {
   min-width: 196px;
+  margin-top: 12px;
+  letter-spacing: 0.24px;
+
+  @include vp-1199 {
+    margin-top: 4px;
+    min-width: auto;
+  }
 }
