--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -14,6 +14,10 @@
 
     height: 100vh;
   }
+
+  @include vp-767 {
+    padding: 20px 0;
+  }
 }
 
 .main-header__wrapper {
@@ -28,6 +32,7 @@
   margin-right: 20px;
   transition: all $trans-default;
   display: inline-flex;
+  transform: scale(1);
   /*display: flex;
   align-items: center;
   justify-content: center;*/
@@ -53,12 +58,12 @@
   }
 
   .is-open & {
-    // z-index: -1;
-    // pointer-events: none;
+    z-index: -1;
+    pointer-events: none;
 
     @include vp-767 {
       margin: 0;
-      transform: scale(0);
+      //transform: scale(0);
     }
   }
 }
