--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/about";
 @import "blocks/btn";
 @import "blocks/data-accordion";
 @import "blocks/hero";
