--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,3 +1,128 @@
+.about {
+  padding: 118px 0 120px 0;
+
+  @include vp-1199 {
+    padding: 99px 0 120px 0;
+  }
+
+  @include vp-767 {
+    padding: 69px 0 120px 0;
+  }
+}
+
+.about__info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 33px 138px;
+  margin: 0 8.55% 60px 0;
+
+  @include vp-1199 {
+    grid-template-columns: 1fr;
+    margin: 0 26.56% 60px 0;
+    gap: 29px;
+  }
+
+  @include vp-767 {
+    margin: 0 4px 40px 0;
+    gap: 25px;
+  }
+}
+
+.about__info-intro {
+  @include vp-767 {
+    margin-bottom: 5px;
+  }
+}
+
+.about__info-intro h2 {
+  margin: 4px 0 30px 0;
+
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 50px;
+  color: $color-cerulean-blue;
+
+  @include vp-1199 {
+    font-size: 34px;
+    margin: 0 0 25px 1px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 13px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.about__info-intro p {
+  margin: 0;
+
+  font-size: 22px;
+  line-height: 32px;
+
+  @include vp-1199 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+
+.about__goal h3 {
+  margin: 0 0 33px 0;
+
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 36px;
+  color: $color-cerulean-blue;
+
+  @include vp-1199 {
+    font-size: 28px;
+    line-height: 28px;
+    margin-bottom: 23px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 11px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+.about__goal p {
+  margin: 0;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+  }
+}
+
+.about__link {
+  grid-column: -1 / -2;
+  justify-self: start;
+  letter-spacing: 0.28px;
+
+  @include vp-1199 {
+    margin-top: 7px;
+  }
+
+  @include vp-767 {
+    margin: 0;
+  }
+}
+
+
+
+
+
+
 .about__features-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
