--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,7 +1,5 @@
 .btn {
-  display: grid;
-  grid-template-columns: min-content 46px;
-  gap: 30px;
+  display: inline-flex;
   padding: 4px 4px 4px 30px;
   text-transform: uppercase;
 
@@ -23,7 +21,7 @@
 
   span {
     display: block;
-    margin-top: 16px;
+    margin: 16px 30px 0 0;
   }
 
   div {
@@ -93,11 +91,9 @@
     padding: 4px 4px 4px 20px;
     font-size: 12px;
     line-height: 12px;
-    grid-template-columns: min-content 34px;
-    gap: 20px;
 
     span {
-      margin-top: 12px;
+      margin: 12px 20px 0 0;
     }
 
     div {
