--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/data-accordion";
 @import "blocks/hero";
 @import "blocks/modal";
+@import "blocks/programs";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/main-footer";
