--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,5 +1,422 @@
+.programs__wrapper {
+  position: relative;
+
+  display: grid;
+  grid-template-columns: auto 1fr auto 52px 54px;
+  grid-template-rows: repeat(3, auto);
+  row-gap: 39px;
+  grid-template-areas:
+    "title . link link link"
+    "swiper swiper swiper swiper swiper"
+    "scroll scroll scroll . buttons";
+
+  @include vp-1199 {
+    row-gap: 38px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: auto 1fr 50px;
+    grid-template-areas:
+    "title . buttons"
+    "swiper swiper swiper"
+    "link link link";
+    row-gap: 29px;
+  }
+}
+
+.programs__wrapper h2 {
+  margin: 4px 20px 0 0;
+  grid-area: title;
+
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 50px;
+  color: $color-cerulean-blue;
+
+  @include vp-1199 {
+    font-size: 34px;
+    margin: 1px 20px 0 0;
+  }
+
+  @include vp-767 {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.programs__link {
+  grid-area: link;
+  background-color: $color-alabaster;
+
+  @include vp-767 {
+    width: 70%;
+    padding: 4px 4px 4px 30px;
+  }
+}
+
+.programs__button {
+  @include vp-767 {
+    margin-left: auto;
+  }
+}
+
+.programs__container {
+  max-width: 1240px;
+  overflow: hidden;
+  grid-area: swiper;
+  margin-top: 6px;
+
+  /* @include vp-1239 {
+    width: 100%;
+  } */
+
+  @include vp-1199 {
+    overflow: visible;
+    width: 100%;
+    margin-top: 2px;
+  }
+
+  @include vp-767 {
+    overflow: hidden;
+  }
+}
+
 .programs__content-wrapper {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+.programs__slide {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 392px;
+  min-height: 420px;
+  height: auto;
+  padding: 280px 51px 20px 20px;
+  border-radius: 12px;
+
+  color: $color-default-white;
+
+  background-color: $color-echo-blue;
+
+  /*@include vp-1239 {
+    width: 30.55vw;
+    min-height: 33.22vw;
+  }*/
+
+  @include vp-1199 {
+    width: 42.19vw;
+    min-height: 54.69vw;
+    padding: 285px 41px 20px 20px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    min-height: 125vw;
+    padding: 271px 10px 18px 10px;
+  }
+}
+
+.programs__image-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+
+  /*@include vp-767 {
+    width: 100%;
+    min-height: 128.75vw;
+  }*/
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 12px;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba($color-cerulean-blue, 0.2);
+  }
+}
+
+.programs__image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: none;
+  border-radius: 12px;
+
+  /*@include vp-1239 {
+    width: 30.55vw;
+    min-height: 33.22vw;
+  }
+
+  @include vp-1199 {
+    width: 100%;
+    min-height: 100%;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    min-height: 128.75vw;
+  }*/
+}
+
+.programs__text {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.programs__text h3 {
+  margin: 0;
+  width: 60.44%;
+
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+  color: $color-cerulean-blue;
+  padding: 11px 18px 5px 18px;
+  background-color: $color-default-white;
+  border-radius: 12px 12px 0 0;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: -17px;
+
+    width: 18px;
+    height: 18px;
+
+    background-color: $color-transparent;
+    background-image: url("../img/svg/angle-bottom.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @include vp-1199 {
+    width: 65.6%;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 13px 18px 2px 18px;
+
+    &::before {
+      bottom: 1px;
+      right: -18px;
+    }
+  }
+
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 18px;
+    padding: 18px 18px 7px 18px;
+    width: 54.2%;
+  }
+}
+
+.programs__info {
+  background-color: $color-default-white;
+  padding: 10px 18px 12px 18px;
+  display: grid;
+  grid-template-columns: 1fr 30px;
+  gap: 16px;
+  border-radius: 0px 12px 12px 12px;
+  margin-top: -1px;
+  min-height: 79px;
+  align-items: center;
+
+  @include vp-1199 {
+    min-height: 77px;
+    padding: 7px 18px 10px 18px;
+  }
+
+  @include vp-767 {
+    min-height: 69px;
+    padding: 8px 18px 10px 18px;
+  }
+}
+
+.programs__info p {
+  font-size: 14px;
+  line-height: 18px;
+  color: $color-charcoal;
+  margin: 0;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+
+.programs__slide-link {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  color: $color-default-white;
+  background-color: $color-cerulean-blue;
+  border-radius: 44px;
+  transition: all $trans-default;
+  align-self: start;
+  margin-top: 13px;
+
+  svg {
+    transition: all $trans-default;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $color-default-white;
+
+    svg {
+      color: $color-cerulean-blue;
+      transform: rotate(45deg);
+    }
+  }
+
+  &:active {
+    background-color: $color-default-white;
+
+    svg {
+      color: rgba($color-cerulean-blue, 0.7);
+      transform: rotate(45deg);
+    }
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: $color-mischka;
+
+    svg {
+      color: rgba($color-default-white, 0.6);
+    }
+  }
+
+  @include vp-1199 {
+    margin-top: 15px;
+  }
+
+  @include vp-767 {
+    margin-top: 10px;
+  }
+}
+
+.programs__scrollbar {
+  grid-area: scroll;
+  width: 100%;
+  height: 2px;
+  background-color: rgba($color-cerulean-blue, 0.2);
+  margin-top: 11px;
+  max-width: 1134px;
+
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.swiper-scrollbar-drag {
+  background-color: $color-cerulean-blue;
+  border-radius: 0;
+}
+
+.programs__nav-buttons {
+  grid-area: buttons;
+  display: flex;
+}
+
+.programs__nav-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 22px;
+  height: 22px;
+  padding: 6px;
+
+  background-color: $color-transparent;
+  border: none;
+  cursor: pointer;
+
+  transition: all $trans-default;
+
+
+  user-select: none;
+  border-radius: 30px;
+
+  svg {
+    transition: all $trans-default;
+    color: $color-cerulean-blue;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $color-default-white;
+
+    svg {
+      color: $color-cerulean-blue;
+    }
+  }
+
+  &:active {
+    background-color: $color-default-white;
+
+    svg {
+      color: rgba($color-cerulean-blue, 0.7);
+    }
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: $color-transparent;
+
+    pointer-events: none;
+
+    svg {
+      color: $color-mischka;
+    }
+  }
+}
+
+.programs__nav-button--prev {
+  margin-right: 10px;
+
+  svg {
+    transform: rotate(-135deg);
+  }
+
+  @include vp-767 {
+    margin-right: 6px;
+  }
+}
+
+.programs__nav-button--next {
+
+  svg {
+    transform: rotate(45deg);
+  }
 }
