--- a/source/sass/blocks/conditions.scss
+++ b/source/sass/blocks/conditions.scss
@@ -3,11 +3,11 @@
   background-color: $color-cerulean-blue;
 
   @include vp-1199 {
-    padding: 100px 0;
+    padding: 98px 0 100px 0;
   }
 
   @include vp-767 {
-    padding: 67px 0;
+    padding: 69px 0 67px 0;
   }
 }
 
@@ -20,8 +20,12 @@
 
   @include vp-1199 {
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 45px;
     margin: 0;
+  }
+
+  @include vp-767 {
+    gap: 35px;
   }
 }
 
@@ -36,12 +40,15 @@
 
   @include vp-1199 {
     font-size: 34px;
+    margin-bottom: 28px;
+    width: 73.45%;
   }
 
   @include vp-767 {
-    margin-bottom: 15px;
+    margin-bottom: 13px;
     font-size: 20px;
     line-height: 20px;
+    width: 100%;
   }
 }
 
@@ -51,10 +58,14 @@
 
   @include vp-1199 {
     line-height: 20px;
+    width: 73.45%;
+    margin-bottom: 36px;
   }
 
   @include vp-767 {
     font-size: 14px;
+    width: 100%;
+    margin-bottom: 25px;
   }
 }
 
@@ -81,11 +92,11 @@
   @include vp-1199 {
     font-size: 28px;
     line-height: 28px;
-    margin-bottom: 35px;
+    margin: 0 0 42px 0;
   }
 
   @include vp-767 {
-    margin-bottom: 20px;
+    margin-bottom: 26px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -100,6 +111,17 @@
   gap: 23px;
   color: $color-alabaster;
   counter-reset: program-counter;
+
+  @include vp-1199 {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px 46px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
+    padding-left: 15px;
+    gap: 15px 0;
+  }
 }
 
 .conditions__requirements-item {
@@ -132,6 +154,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  @include vp-1199 {
+    padding: 25px 30px 25px 24px;
+  }
+
+  @include vp-767 {
+    padding: 18px 24px;
+
+    &::before {
+      width: 25px;
+      height: 32px;
+      font-size: 18px;
+      line-height: 18px;
+      top: 10px;
+    }
   }
 }
 
