--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,5 +1,13 @@
 .programs {
   padding: 0 0 123px 0;
+
+  @include vp-1199 {
+    padding: 0 0 102px 0;
+  }
+
+  @include vp-767 {
+    padding: 0 0 68px 0;
+  }
 }
 
 .programs__wrapper {
