--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -134,6 +134,7 @@
   height: auto;
   padding: 124px 46px 0 0;
   border-radius: 12px;
+  transition: all $trans-default;
 
   // color: $color-default-white;
 
@@ -395,6 +396,51 @@
 .news__nav {
   display: flex;
   justify-content: space-between;
+  min-height: 32px;
+}
+
+.news__pagination-wrapper {
+  display: inline-flex;
+}
+
+.news__bullet {
+  display: inline-flex;
+  width: 32px;
+  height: 32px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 20px;
+  transition: all $trans-default;
+  background-color: $color-transparent;
+  color: rgba($color-cerulean-blue, 0.5);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  text-transform: uppercase;
+  border: none;
+
+  &:hover,
+  &:focus {
+    color: $color-cerulean-blue;
+    box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+    background-color: $color-transparent;
+  }
+
+  &:active {
+    color: $color-default-white;
+    background-color: $color-endeavour;
+  }
+}
+
+.news__bullet--active {
+  color: $color-default-white;
+  background-color: $color-endeavour;
+}
+
+.news__bullet:not(:last-child) {
+  margin-right: 20px;
 }
 
 .news__nav-button {
