--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/btn";
 @import "blocks/conditions";
 @import "blocks/data-accordion";
+@import "blocks/faq";
 @import "blocks/hero";
 @import "blocks/modal";
 @import "blocks/news";
