--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,35 +1,49 @@
 .faq__wrapper h2 {
   margin: 0 0 67px 0;
-  text-align: center;
-  font-size: 50px;
+
   font-weight: 400;
+  font-size: 50px;
   line-height: 50px;
+  text-align: center;
   color: $color-cerulean-blue;
 
   @include vp-1199 {
+    margin-bottom: 41px;
+
     font-size: 34px;
-    margin-bottom: 30px;
   }
 
   @include vp-767 {
+    margin-bottom: 33px;
+
     font-size: 20px;
     line-height: 20px;
-    margin-bottom: 24px;
   }
 }
 
 .faq__list {
+  display: grid;
   margin: 0;
   padding: 0 106px;
+
   list-style-type: none;
-  display: grid;
-  grid-template-columns: 1fr;
+
   gap: 10px;
+  grid-template-columns: 1fr;
+
+  @include vp-1199 {
+    padding: 0;
+  }
 }
 
 .faq__item {
-  border-radius: 16px;
   position: relative;
+
+  border-radius: 16px;
+
+  @include vp-767 {
+    border-radius: 14px;
+  }
 
   &.is-active {
     .faq__item-content {
@@ -52,8 +66,9 @@
     }
 
     h3 {
-      color: $color-default-white;
       margin-bottom: 20px;
+
+      color: $color-default-white;
     }
 
     p {
@@ -176,30 +191,48 @@
 }
 
 .faq__item-content {
-  width: 100%;
-  height: 100%;
-  padding: 40px 330px 26px 40px;
-  transition: all $trans-default;
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 40px 330px 26px 40px;
+
   border-radius: 16px;
   box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-  position: relative;
+
+  transition: all $trans-default;
+
+  @include vp-1199 {
+    padding: 37px 168px 37px 30px;
+  }
+
+  @include vp-767 {
+    border-radius: 14px;
+    padding: 22px 60px 22px 15px;
+  }
 }
 
 .faq__item-click {
-  width: 100%;
-  height: 100%;
-  border-radius: 16px;
   position: absolute;
   top: 0;
   left: 0;
-  padding: 0;
-  border: none;
   z-index: 1;
+
+  width: 100%;
+  height: 100%;
+  padding: 0;
+
   background-color: $color-transparent;
+  border: none;
+  border-radius: 16px;
   cursor: pointer;
+
+  @include vp-767 {
+    border-radius: 14px;
+  }
 
   &:hover + .faq__item-content,
   &:focus + .faq__item-content {
@@ -218,8 +251,8 @@
   }
 
   &:active + .faq__item-content {
-      background-color: $color-default-white;
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+    background-color: $color-default-white;
+    box-shadow: inset 0 0 0 1px $color-cerulean-blue;
 
     .faq__accordion-button {
       background-color: $color-endeavour;
@@ -269,9 +302,18 @@
 
   .is-active & {
     & + .faq__item-content {
+      padding: 40px 330px 33px 40px;
+
       background-color: $color-cerulean-blue;
       box-shadow: none;
-      padding: 40px 330px 33px 40px;
+
+      @include vp-1199 {
+        padding: 37px 108px 26px 30px;
+      }
+
+      @include vp-767 {
+        padding: 22px 15px 15px 15px;
+      }
 
       .faq__accordion-button {
         background-color: $color-default-white;
@@ -289,6 +331,14 @@
 
       h3 {
         color: $color-default-white;
+
+        @include vp-1199 {
+          margin-bottom: 23px;
+        }
+
+        @include vp-767 {
+          margin: 0 50px 17px 0;
+        }
       }
 
       p {
@@ -345,11 +395,14 @@
   position: absolute;
   top: 40px;
   right: 40px;
-  transition: all $trans-default;
-  border-radius: 30px;
+
   width: 40px;
   height: 40px;
+
   background-color: $color-cerulean-blue;
+  border-radius: 30px;
+
+  transition: all $trans-default;
 
 
   &::before,
@@ -380,6 +433,16 @@
     height: 1px;
 
     transform: translateY(-50%);
+  }
+
+  @include vp-1199 {
+    top: 30px;
+    right: 30px;
+  }
+
+  @include vp-767 {
+    top: 20px;
+    right: 15px;
   }
 
   /* &:hover,
@@ -457,13 +520,37 @@
 
 .faq__item h3 {
   margin: 0;
-  font-size: 28px;
+
   font-weight: 400;
+  font-size: 28px;
   line-height: 34px;
   color: $color-cerulean-blue;
+
   transition: all $trans-default;
+
+  @include vp-1199 {
+    font-size: 22px;
+    line-height: 26px;
+  }
+
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
-.faq__item p {
+/* .faq__answer {
+  max-height: none;
+} */
+
+.faq__answer p {
   margin: 0;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+  }
 }
