Добавляет блок Отзывы

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -348,7 +348,7 @@
   }
 }
 
-.swiper-scrollbar-drag {
+.programs__scrollbar div {
   background-color: $color-cerulean-blue;
   border-radius: 0;
 }
