--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/conditions";
 @import "blocks/data-accordion";
 @import "blocks/faq";
+@import "blocks/feedback";
 @import "blocks/hero";
 @import "blocks/modal";
 @import "blocks/news";
