--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -84,6 +84,12 @@
   @include vp-1199 {
     width: 72.92vw;
     padding: 51px 50px 47px 50px;
+
+    @media (orientation: landscape) {
+      grid-template-columns: 1fr;
+      justify-items: center;
+      text-align: center;
+    }
   }
 
   @include vp-767 {
@@ -91,6 +97,13 @@
     padding: 31px 15px 26px 15px;
     grid-template-columns: 1fr;
     row-gap: 14px;
+
+    @media (orientation: landscape) {
+      justify-items: center;
+      text-align: center;
+      padding: 51px 15px 35px 15px;
+      row-gap: 19px;
+    }
   }
 }
 
@@ -101,10 +114,20 @@
   align-items: start;
   margin-right: 20px;
 
+  @include vp-1199 {
+    @media (orientation: landscape) {
+      margin: 0;
+    }
+  }
+
   @include vp-767 {
     grid-template-columns: 60px min-content;
     gap: 10px;
     margin: 0;
+
+    @media (orientation: landscape) {
+      gap: 7px;
+    }
   }
 }
 
@@ -132,6 +155,12 @@
     font-size: 14px;
     line-height: 18px;
     margin-top: 12px;
+
+    @media (orientation: landscape) {
+      font-size: 18px;
+      line-height: 20px;
+      margin-top: 10px;
+    }
   }
 }
 
@@ -145,6 +174,11 @@
   @include vp-1199 {
     gap: 26px;
     padding: 29px 1px 0 0;
+
+    @media (orientation: landscape) {
+      justify-self: center;
+      padding: 0;
+    }
   }
 
   @include vp-767 {
@@ -152,6 +186,10 @@
     padding: 0;
     justify-self: start;
     margin-bottom: 10px;
+
+    @media (orientation: landscape) {
+      justify-self: center;
+    }
   }
 }
 
@@ -183,6 +221,10 @@
     line-height: 14px;
     color: rgba($color-charcoal, 0.9);
     display: block;
+
+    @media (orientation: landscape) {
+      font-size: 14px;
+    }
   }
 }
 
@@ -207,6 +249,11 @@
     font-size: 16px;
     line-height: 18px;
     margin-bottom: 15px;
+
+    @media (orientation: landscape) {
+      margin-bottom: 10px;
+      padding: 0 82px 0 79px;
+    }
   }
 }
 
@@ -219,6 +266,11 @@
 
   @include vp-767 {
     font-size: 14px;
+
+    @media (orientation: landscape) {
+      margin-bottom: 10px;
+      padding: 0 36px;
+    }
   }
 }
 
