--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,8 @@
 @import "vendor/normalize";
 // Swiper 7.4.1
 @import "vendor/swiper";
+// Leaflet
+@import "vendor/leaflet";
 
 // Global
 // ---------------------------------
@@ -21,6 +23,7 @@
 @import "blocks/about";
 @import "blocks/btn";
 @import "blocks/conditions";
+@import "blocks/contacts";
 @import "blocks/data-accordion";
 @import "blocks/faq";
 @import "blocks/feedback";
