--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -12,38 +12,56 @@
 }
 
 .contacts__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.contacts__text-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
-  row-gap: 73px;
-  grid-template-areas:
-    "title info"
-    "map map";
+  margin-bottom: 73px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -33px;
+    left: 0;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: rgba($color-default-white, 0.2);
+  }
 
   @include vp-1199 {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(2, auto);
     row-gap: 30px;
-    grid-template-areas:
-    "title"
-    "info"
-    "map";
+    margin-bottom: 57px;
+
+    &::before {
+      bottom: -27px;
+    }
   }
 
   @include vp-767 {
-    grid-template-columns: 1fr;
+    margin-bottom: 55px;
     row-gap: 31px;
+
+    &::before {
+      bottom: -25px;
+    }
   }
 }
 
-.contacts__wrapper h2 {
+.contacts__text-wrapper h2 {
   margin: 5px 30px 0 0;
 
   font-size: 50px;
   font-weight: 400;
   line-height: 50px;
   color: $color-default-white;
-  grid-area: title;
 
   @include vp-1199 {
     font-size: 34px;
@@ -53,12 +71,10 @@
   @include vp-767 {
     font-size: 20px;
     line-height: 20px;
-    grid-area: auto;
   }
 }
 
 .contacts__list {
-  grid-area: info;
   margin: 0 0 0 15px;
   padding: 0;
   list-style-type: none;
@@ -67,18 +83,16 @@
   gap: 52px;
 
   @include vp-1199 {
-    margin: 0 0 27px 0;
+    margin: 0;
     grid-template-columns: 39.53% auto auto;
     gap: 49px;
     justify-items: end;
   }
 
   @include vp-767 {
-    grid-area: auto;
     grid-template-columns: 1fr;
     justify-items: start;
     gap: 14px;
-    margin-bottom: 24px;
   }
 }
 
@@ -134,8 +148,56 @@
   font-style: normal;
 }
 
+.contacts__tel,
+.contacts__email {
+  transition: all $trans-default;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: $color-default-white;
+    transition: all $trans-default;
+    opacity: 0;
+  }
+
+  &:hover,
+  &:focus {
+    &::before {
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    color: rgba($color-default-white, 0.8);
+
+    &::before {
+      opacity: 0;
+    }
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:disabled {
+    color: $color-mischka;
+
+    pointer-events: none;
+
+    &::before {
+      opacity: 0;
+    }
+  }
+}
+
 .contacts__map {
-  grid-area: map;
   width: 100%;
   height: 500px;
   border-radius: 16px;
@@ -148,7 +210,6 @@
   @include vp-767 {
     height: 75vw;
     min-height: 240px;
-    grid-area: auto;
   }
 }
 
