--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -1,4 +1,4 @@
-.custom-select {
+/*.custom-select {
   position: relative;
 
   width: 300px;
@@ -259,7 +259,7 @@
     }
   } */
 
-  &--placeholder {
+  /*&--placeholder {
     .custom-select__label {
       transform: translateY(calc(-50% - 40px));
       opacity: 1;
@@ -299,4 +299,4 @@
       color: #15ab07;
     }
   }
-}
+} */
