--- a/source/sass/blocks/custom-toggle.scss
+++ b/source/sass/blocks/custom-toggle.scss
@@ -1,4 +1,4 @@
-.custom-toggle {
+/*.custom-toggle {
   position: relative;
   font-size: 18px;
   line-height: 27px;
@@ -135,4 +135,4 @@
       color: #15ab07;
     }
   }
-}
+}*/
