--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,10 +23,12 @@
 @import "blocks/about";
 @import "blocks/btn";
 @import "blocks/conditions";
+@import "blocks/connection";
 @import "blocks/contacts";
 @import "blocks/data-accordion";
 @import "blocks/faq";
 @import "blocks/feedback";
+@import "blocks/form";
 @import "blocks/hero";
 @import "blocks/modal";
 @import "blocks/news";
