--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,8 @@ $color-endeavour:                   #275699;
 $color-echo-blue:                   #a3acc1;
 $color-grey-nickel:                 #b7b5af;
 $color-hawkes-blue:                 #d6e2f3;
+$color-bleach-white:                #ebdeca;
+$color-wild-watermelon:             #ff5e66;
 
 
 // Gradient
