--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
+  position: relative;
 
   @include vp-1199 {
     padding: 676px 0 60px 0;
