--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -88,6 +88,47 @@
     }
   }
 
+  &--blue {
+    background-color: $color-transparent;
+    box-shadow: inset 0 0 0 1px $color-default-white;
+    color: $color-default-white;
+
+    div {
+      background-color: $color-default-white;
+    }
+
+    svg {
+      color: $color-cerulean-blue;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: $color-default-white;
+      color: $color-cerulean-blue;
+
+      div {
+        background-color: $color-cerulean-blue;
+      }
+
+      svg {
+        color: $color-default-white;
+      }
+    }
+
+    &:active {
+      background-color: $color-default-white;
+      color: rgba($color-cerulean-blue, 0.7);
+
+      div {
+        background-color: $color-cerulean-blue;
+      }
+
+      svg {
+        color: rgba($color-default-white, 0.7);
+      }
+    }
+  }
+
   @include vp-767 {
     padding: 4px 4px 4px 20px;
     font-size: 12px;
