--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -1,14 +1,5 @@
-/*.custom-select {
+.custom-select {
   position: relative;
-
-  width: 300px;
-  padding: 14px 0 28px;
-  margin: 0 0 44px 0;
-
-  @media screen and (max-width: 767px) {
-    padding: 4px 0 14px;
-    width: 100%;
-  }
 
   &__label {
     position: absolute;
@@ -18,22 +9,6 @@
     transform: translateY(-50%);
 
     transition: transform 0.3s ease, opacity  0.3s ease;
-
-    pointer-events: none;
-
-    @media screen and (max-width: 767px) {
-      transform: translateY(calc(-50% - 5px));
-    }
-  }
-
-  &__placeholder {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-
-    transform: translateY(-50%);
-
-    transition: transform 0.3s ease, opacity 0.3s ease;
 
     pointer-events: none;
 
@@ -63,101 +38,111 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 48px;
-    padding: 5px 10px;
+    height: 50px;
+    padding: 17px 20px;
 
-    background-color: rgba(255, 255, 255, 0);
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+    background-color: $color-transparent;
+    border: 1px solid rgba($color-default-white, 0.3);
+    border-radius: 8px;
     outline: none;
     cursor: pointer;
 
-    transition: border 0.3s ease;
+    transition: all $trans-default;
 
-    &:hover {
-      border: 2px solid rgba(0, 0, 0, 0.5);
-    }
-
+    &:hover,
     &:focus {
-      border: 2px solid rgba(0, 0, 0, 0.8);
+      border: 1px solid $color-default-white;
+
+      & + label {
+        color: $color-alabaster;
+      }
     }
 
     &:disabled {
       pointer-events: none;
-      opacity: 0.3;
+
+      border: 1px solid rgba($color-default-white, 0.4);
+      background-color: rgba($color-default-white, 0.2);
+
+      & + label {
+        color: rgba($color-alabaster, 0.6);
+      }
     }
   }
 
   &__list {
     position: absolute;
-    bottom: 10px;
+    bottom: -4px;
     z-index: 1;
 
     width: 100%;
-    max-height: 100px;
+    max-height: 194px;
     margin: 0;
     padding: 0;
     overflow-y: auto;
 
     list-style: none;
 
-    background-color: #ffffff;
-    border: 2px solid #000000;
+    background-color: $color-default-white;
+    border: 1px solid $color-default-white;
     transform: translateY(100%);
     visibility: hidden;
     opacity: 0;
+    border-radius: 8px;
 
-    transition: visibility 0.3s ease, opacity 0.3s ease;
+    transition: all $trans-default;
   }
 
   &__item {
-    padding: 5px;
+    padding: 17px 20px;
+    font-size: 14px;
+    line-height: 14px;
+    color: $color-charcoal;
+    background-color: $color-transparent;
 
     outline: none;
     cursor: pointer;
 
-    transition: background-color 0.3s ease;
+    transition: all $trans-default;
 
     &[aria-selected="true"] {
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: $color-cerulean-blue;
+      color: $color-default-white;
 
       @media (hover: hover) {
         &:hover:not(.focus-visible) {
-          background-color: rgba(0, 0, 0, 0.2);
+          background-color: $color-transparent;
+          color: $color-cerulean-blue;
         }
       }
 
       &.focus-visible:focus {
-        background-color: rgba(0, 0, 0, 0.2);
+        background-color: $color-cerulean-blue;
+        color: $color-default-white;
       }
     }
 
     @media (hover: hover) {
       &:hover:not(.focus-visible) {
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: $color-transparent;
+        color: $color-cerulean-blue;
       }
     }
 
     &.focus-visible:focus {
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: $color-cerulean-blue;
+      color: $color-default-white;
+    }
+
+    &:active:active {
+      background-color: $color-cerulean-blue;
+      color: $color-default-white;
     }
   }
 
-  &__error {
-    position: absolute;
-    bottom: -15px;
-    left: 0;
-
-    color: #ff1553;
-
-    opacity: 0;
-
-    transition: opacity 0.1s ease;
-  }
-
   &__text {
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 14px;
     flex-shrink: 0;
     width: 80%;
     overflow: hidden;
@@ -165,6 +150,7 @@
     text-align: left;
     white-space: nowrap;
     text-overflow: ellipsis;
+    color: $color-alabaster;
 
     opacity: 0;
 
@@ -177,13 +163,13 @@
 
   &__icon {
     flex-shrink: 0;
-    width: 20px;
-    height: 10px;
+    width: 15px;
+    height: 7px;
     margin-left: auto;
 
-    background-color: #000000;
+    background-color: $color-default-white;
 
-    transition: transform 0.3s ease;
+    transition: transform $trans-default;
 
     clip-path: polygon(100% 0, 100% 20%, 50% 100%, 0 20%, 0 0, 50% 80%);
   }
@@ -191,18 +177,27 @@
   &.is-disabled {
     pointer-events: none;
 
+    .custom-select__button {
+      border: 1px solid rgba($color-default-white, 0.4);
+      background-color: rgba($color-default-white, 0.2);
+    }
+
+    label {
+      color: rgba($color-alabaster, 0.6);
+    }
+
     .custom-select__list {
       display: none;
     }
   }
 
-  &.open-up {
+  /*&.open-up {
     .custom-select__list {
       bottom: auto;
       top: 0;
       transform: translateY(calc(-100% + 10px));
     }
-  }
+  }*/
 
   &.is-open {
     .custom-select__list {
@@ -217,60 +212,28 @@
     .custom-select__label {
       opacity: 0;
     }
+
+    label {
+      color: $color-alabaster;
+    }
   }
 
   &.not-empty {
     .custom-select__text {
       opacity: 1;
     }
-
-    .custom-select__label {
-      opacity: 0;
-    }
-
-    .custom-select__placeholder {
-      opacity: 0;
-    }
   }
 
   &.is-invalid {
-    .custom-select__error {
-      opacity: 1;
-    }
-
     .custom-select__button {
-      border: 2px solid #ff1553;
+      border: 1px solid $color-wild-watermelon;
+      background-color: rgba($color-wild-watermelon, 0.2);
 
       &:focus,
       &:hover {
-        border: 2px solid rgba(#ff1553, 0.5);
+        border: 1px solid $color-default-white;
+        background-color: $color-transparent;
       }
-    }
-  }
-
-  /* &.is-valid {
-    .custom-select__button {
-      border: 2px solid $color-eucalyptus;
-
-      &:focus,
-      &:hover {
-        border: 2px solid rgba($color-eucalyptus, 0.5);
-      }
-    }
-  } */
-
-  /*&--placeholder {
-    .custom-select__label {
-      transform: translateY(calc(-50% - 40px));
-      opacity: 1;
-    }
-
-    &.is-open .custom-select__label {
-      opacity: 1;
-    }
-
-    &.not-empty .custom-select__label {
-      opacity: 1;
     }
   }
 
@@ -285,18 +248,4 @@
       opacity: 1;
     }
   }
-
-  .input-message {
-    position: absolute;
-    right: 0;
-    bottom: -5px;
-
-    &.is-invalid {
-      color: #ff0000;
-    }
-
-    &.is-valid {
-      color: #15ab07;
-    }
-  }
-} */
+}
