--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,28 +6,46 @@
   font-size: 32px;
   font-weight: 400;
   line-height: 36px;
-  margin: 0 0 20px 0;
+  margin: 0 0 24px 0;
 
   @include vp-1199 {
     font-size: 28px;
     line-height: 28px;
+    margin-bottom: 28px;
   }
 
   @include vp-767 {
     font-size: 18px;
     line-height: 22px;
+    margin-bottom: 17px;
   }
 }
 
 .form p {
   color: rgba($color-alabaster, 0.9);
-  margin: 0 0 30px 0;
+  margin: 0 0 19px 0;
+
+  @include vp-1199 {
+    line-height: 20px;
+    margin-bottom: 32px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+    margin-bottom: 26px;
+  }
 }
 
 .form__fields-wrapper {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px;
+  gap: 16px;
+  margin-bottom: 43px;
+
+  @include vp-767 {
+    gap: 21px;
+    margin-bottom: 29px;
+  }
 }
 
 .form__field-wrapper {
@@ -45,7 +63,7 @@
   label {
     display: block;
     width: fit-content;
-    padding-bottom: 12px;
+    padding-bottom: 8px;
     transition: all $trans-default;
     /* display: inline-flex;
     align-items: center;
@@ -67,6 +85,12 @@
         //background-color: $color-transparent;
       }
     }
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+      padding-bottom: 11px;
+    }
   }
 
   input,
@@ -75,7 +99,7 @@
     // max-width: 300px;
     order: 1;
     // margin-left: auto;
-    padding: 16px 25px;
+    padding: 14px 25px;
 
     border: 1px solid rgba($color-default-white, 0.3);
     border-radius: 8px;
@@ -128,6 +152,10 @@
 
   textarea {
     min-height: 98px;
+
+    @include vp-767 {
+      min-height: 94px;
+    }
   }
 
   /* &__label {
@@ -179,6 +207,8 @@
 }
 
 .form__field-wrapper--select {
+  margin-bottom: 4px;
+
   label {
     display: block;
     width: fit-content;
@@ -194,350 +224,21 @@
         //background-color: $color-transparent;
       }
     }
-  }
-}
 
-.custom-select {
-  position: relative;
-  //border-radius: 8px;
+    @include vp-1199 {
+      padding-bottom: 8px;
+    }
 
-  // width: 300px;
-  // padding: 14px 0 28px;
-  // margin: 0 0 44px 0;
-
-  /*@media screen and (max-width: 767px) {
-    padding: 4px 0 14px;
-    width: 100%;
-  }*/
-
-  &__label {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-
-    transform: translateY(-50%);
-
-    transition: transform 0.3s ease, opacity  0.3s ease;
-
-    pointer-events: none;
-
-    @media screen and (max-width: 767px) {
-      transform: translateY(calc(-50% - 5px));
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+      padding-bottom: 11px;
     }
   }
 
-  /* &__placeholder {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-
-    transform: translateY(-50%);
-
-    transition: transform 0.3s ease, opacity 0.3s ease;
-
-    pointer-events: none;
-
-    @media screen and (max-width: 767px) {
-      transform: translateY(calc(-50% - 5px));
-    }
-  }*/
-
-  select {
-    position: absolute;
-
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-
-    white-space: nowrap;
-
-    border: 0;
-
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-  }
-
-  &__button {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    padding: 17px 20px;
-
-    background-color: $color-transparent;
-    border: 1px solid rgba($color-default-white, 0.3);
-    border-radius: 8px;
-    outline: none;
-    cursor: pointer;
-
-    transition: all $trans-default;
-
-    &:hover,
-    &:focus {
-      border: 1px solid $color-default-white;
-
-      & + label {
-        color: $color-alabaster;
-      }
-    }
-    // нужно поправить!"
-    &:disabled {
-      pointer-events: none;
-
-      border: 1px solid rgba($color-default-white, 0.4);
-      background-color: rgba($color-default-white, 0.2);
-
-      & + label {
-        color: rgba($color-alabaster, 0.6);
-      }
-    }
-  }
-
-  &__list {
-    position: absolute;
-    bottom: -4px;
-    z-index: 1;
-
-    width: 100%;
-    max-height: 194px;
+  @include vp-767 {
     margin: 0;
-    padding: 0;
-    overflow-y: auto;
-
-    list-style: none;
-
-    background-color: $color-default-white;
-    border: 1px solid $color-default-white;
-    transform: translateY(100%);
-    visibility: hidden;
-    opacity: 0;
-    border-radius: 8px;
-
-    // transition: visibility 0.3s ease, opacity 0.3s ease;
-    transition: all $trans-default;
   }
-
-  &__item {
-    padding: 17px 20px;
-    font-size: 14px;
-    line-height: 14px;
-    color: $color-charcoal;
-    background-color: $color-transparent;
-
-    outline: none;
-    cursor: pointer;
-
-    transition: all $trans-default;
-
-    &[aria-selected="true"] {
-      background-color: $color-cerulean-blue;
-      color: $color-default-white;
-
-      @media (hover: hover) {
-        &:hover:not(.focus-visible) {
-          background-color: $color-transparent;
-          color: $color-cerulean-blue;
-        }
-      }
-
-      &.focus-visible:focus {
-        background-color: $color-cerulean-blue;
-        color: $color-default-white;
-      }
-    }
-
-    @media (hover: hover) {
-      &:hover:not(.focus-visible) {
-        background-color: $color-transparent;
-        color: $color-cerulean-blue;
-      }
-    }
-
-    &.focus-visible:focus {
-      background-color: $color-cerulean-blue;
-      color: $color-default-white;
-    }
-
-    &:active:active {
-      background-color: $color-cerulean-blue;
-      color: $color-default-white;
-    }
-  }
-
-  /* &__error {
-    position: absolute;
-    bottom: -15px;
-    left: 0;
-
-    color: #ff1553;
-
-    opacity: 0;
-
-    transition: opacity 0.1s ease;
-  }*/
-
-  &__text {
-    font-size: 14px;
-    line-height: 14px;
-    flex-shrink: 0;
-    width: 80%;
-    overflow: hidden;
-
-    text-align: left;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    color: $color-alabaster;
-
-    opacity: 0;
-
-    transition: opacity 0.3s ease 0.1s;
-
-    br {
-      display: none;
-    }
-  }
-
-  &__icon {
-    flex-shrink: 0;
-    width: 15px;
-    height: 7px;
-    margin-left: auto;
-
-    background-color: $color-default-white;
-
-    transition: transform $trans-default;
-
-    clip-path: polygon(100% 0, 100% 20%, 50% 100%, 0 20%, 0 0, 50% 80%);
-  }
-
-  &.is-disabled {
-    pointer-events: none;
-
-    .custom-select__button {
-      border: 1px solid rgba($color-default-white, 0.4);
-      background-color: rgba($color-default-white, 0.2);
-    }
-
-    label {
-      color: rgba($color-alabaster, 0.6);
-    }
-
-    .custom-select__list {
-      display: none;
-    }
-  }
-
-  /*&.open-up {
-    .custom-select__list {
-      bottom: auto;
-      top: 0;
-      transform: translateY(calc(-100% + 10px));
-    }
-  }*/
-
-  &.is-open {
-    .custom-select__list {
-      visibility: visible;
-      opacity: 1;
-    }
-
-    .custom-select__icon {
-      transform: rotate(180deg);
-    }
-
-    .custom-select__label {
-      opacity: 0;
-    }
-
-    label {
-      color: $color-alabaster;
-    }
-  }
-
-  &.not-empty {
-    .custom-select__text {
-      opacity: 1;
-    }
-
-    /*.custom-select__label {
-      opacity: 0;
-    }*/
-
-    /*.custom-select__placeholder {
-      opacity: 0;
-    }*/
-  }
-
-  &.is-invalid {
-    /*.custom-select__error {
-      opacity: 1;
-    }*/
-
-    .custom-select__button {
-      border: 1px solid $color-wild-watermelon;
-      background-color: rgba($color-wild-watermelon, 0.2);
-
-      &:focus,
-      &:hover {
-        border: 1px solid $color-default-white;
-        background-color: $color-transparent;
-      }
-    }
-  }
-
-  /* &.is-valid {
-    .custom-select__button {
-      border: 2px solid $color-eucalyptus;
-
-      &:focus,
-      &:hover {
-        border: 2px solid rgba($color-eucalyptus, 0.5);
-      }
-    }
-  } */
-
-  /*&--placeholder {
-    .custom-select__label {
-      transform: translateY(calc(-50% - 40px));
-      opacity: 1;
-    }
-
-    &.is-open .custom-select__label {
-      opacity: 1;
-    }
-
-    &.not-empty .custom-select__label {
-      opacity: 1;
-    }
-  } */
-
-  &.slide-up.not-empty,
-  &.slide-up.is-open {
-    .custom-select__label {
-      transform: translateY(calc(-50% - 40px));
-      opacity: 1;
-    }
-
-    .custom-select__text {
-      opacity: 1;
-    }
-  }
-
-  /*.input-message {
-    position: absolute;
-    right: 0;
-    bottom: -5px;
-
-    &.is-invalid {
-      color: #ff0000;
-    }
-
-    &.is-valid {
-      color: #15ab07;
-    }
-  }*/
 }
 
 .custom-toggle {
@@ -570,6 +271,17 @@
     margin: -1px;
 
     clip: rect(0 0 0 0);
+
+    &:hover + .custom-toggle__icon,
+    &:focus + .custom-toggle__icon {
+      border: 1px solid $color-default-white;
+      background-color: $color-transparent;
+    }
+
+    &:disabled + .custom-toggle__icon {
+      border: 1px solid $color-default-white;
+      background-color: rgba($color-default-white, 0.6);
+    }
   }
 
   label {
@@ -582,6 +294,14 @@
     span {
       margin-bottom: 0;
       margin-left: 0;
+
+      @include vp-767 {
+        line-height: 14px;
+      }
+    }
+
+    @include vp-767 {
+      padding: 0 0 0 30px;
     }
   }
 
@@ -596,11 +316,10 @@
       border-radius: 2px;
 
       border: 1px solid rgba($color-default-white, 0.7);
+      background-color: $color-transparent;
 
       transition: all $trans-default;
-      color: $color-default-white;
-
-
+      // color: $color-default-white;
 
       &::before {
         content: "";
@@ -613,6 +332,7 @@
 
         background-color: $color-transparent;
 
+
         background-image: url("../img/svg/icon-checkbox.svg");
         background-repeat: no-repeat;
         background-size: 100%;
@@ -620,8 +340,8 @@
         transform: translate(-50%, -50%);
 
         transition: all $trans-default;
-        color: $color-cerulean-blue;
-        //opacity: 0;
+        // color: $color-cerulean-blue;
+        opacity: 0;
       }
     }
   }
@@ -659,21 +379,45 @@
     }
   }*/
 
-  input:checked + .custom-toggle__icon {
-    border: 1.5px solid #2c39f2;
+  input:checked {
+    & + .custom-toggle__icon {
+      background-color: $color-default-white;
 
-    &::before {
-      background-color: #2c39f2;
+      &::before {
+        opacity: 1;
+      }
+    }
+
+    &:hover + .custom-toggle__icon,
+    &:focus + .custom-toggle__icon {
+      background-color: $color-transparent;
+      border: 1px solid $color-default-white;
+
+      &::before {
+        background-image: url("../img/svg/icon-checkbox-white.svg");
+      }
+    }
+
+    &:disabled + .custom-toggle__icon {
+      background-color: $color-mischka;
+      border: 1px solid $color-mischka;
+
+      &::before {
+        background-image: url("../img/svg/icon-checkbox-white.svg");
+      }
     }
   }
+
+
 
   &.is-invalid {
-    label span {
-      color: #ff1553;
+    .custom-toggle__icon {
+      border: 1px solid rgba($color-wild-watermelon, 0.7);
+      background-color: rgba($color-wild-watermelon, 0.2);
     }
   }
 
-  .input-message {
+  /*.input-message {
     position: absolute;
     right: 0;
     bottom: -5px;
@@ -685,6 +429,16 @@
     &.is-valid {
       color: #15ab07;
     }
+  }*/
+}
+
+.form__button {
+  display: flex;
+  width: 100%;
+  text-align: center;
+
+  span {
+    flex-grow: 1;
   }
 }
 
