--- a/source/sass/blocks/custom-toggle.scss
+++ b/source/sass/blocks/custom-toggle.scss
@@ -1,25 +1,9 @@
-/*.custom-toggle {
+.custom-toggle {
   position: relative;
-  font-size: 18px;
-  line-height: 27px;
-  font-weight: 300;
+  font-size: 12px;
+  line-height: 12px;
 
   display: flex;
-  width: 500px;
-  padding: 14px 0 10px 36px;
-
-  @media screen and (max-width: 767px) {
-    padding: 14px 0 10px 0;
-    width: 100%;
-  }
-
-  &:last-of-type {
-    padding: 14px 0 58px 36px;
-
-    @media screen and (max-width: 767px) {
-      padding: 14px 0 58px 0;
-    }
-  }
 
   input {
     position: absolute;
@@ -29,110 +13,168 @@
     margin: -1px;
 
     clip: rect(0 0 0 0);
+
+    &:hover + .custom-toggle__icon-wrapper,
+    &:focus + .custom-toggle__icon-wrapper {
+      border: 1px solid $color-default-white;
+      background-color: $color-transparent;
+    }
+
+
+    &:disabled + .custom-toggle__icon-wrapper {
+      border: 1px solid $color-default-white;
+      background-color: rgba($color-default-white, 0.6);
+    }
   }
 
   label {
     position: relative;
 
-    padding-left: 52px;
+    padding: 5px 0 0 30px;
 
     cursor: pointer;
 
     span {
       margin-bottom: 0;
       margin-left: 0;
+
+      @include vp-767 {
+        line-height: 14px;
+      }
+    }
+
+    @include vp-767 {
+      padding: 0 0 0 30px;
     }
   }
 
-  &--checkbox {
-    .custom-toggle__icon {
-      position: absolute;
-      top: 0;
-      left: 0;
+  .custom-toggle__icon-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
 
-      width: 28px;
-      height: 28px;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
 
-      border: 1.5px solid #2c39f2;
+    border: 1px solid rgba($color-default-white, 0.7);
+    background-color: $color-transparent;
 
-      transition: border 0.3s ease;
+    transition: all $trans-default;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-      &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
+    @include vp-767 {
+      top: 3px;
+    }
+  }
 
-        width: 20px;
-        height: 20px;
+  .custom-toggle__icon {
+    stroke: $color-transparent;
+    transition: all $trans-default;
+  }
 
-        background-color: rgba(#2c39f2, 0);
 
-        transform: translate(-50%, -50%);
+  input:checked {
+    & + .custom-toggle__icon-wrapper {
+      background-color: $color-default-white;
 
-        transition: background-color 0.3s ease;
+      .custom-toggle__icon {
+        stroke: $color-cerulean-blue;
+      }
+    }
+
+
+
+    &:hover + .custom-toggle__icon-wrapper,
+    &:focus + .custom-toggle__icon-wrapper {
+      background-color: $color-transparent;
+      border: 1px solid $color-default-white;
+
+      .custom-toggle__icon {
+        stroke: $color-default-white;
+      }
+    }
+
+    &:disabled + .custom-toggle__icon-wrapper {
+      background-color: $color-mischka;
+      border: 1px solid $color-mischka;
+
+      .custom-toggle__icon {
+        stroke: $color-default-white;
       }
     }
   }
 
-  &--radio {
-    .custom-toggle__icon {
-      position: absolute;
-      top: 0;
-      left: 0;
 
-      width: 28px;
-      height: 28px;
 
-      border: 1px solid #2c39f2;
-      border-radius: 50%;
+  &.is-invalid {
+    .custom-toggle__icon-wrapper {
+      border: 1px solid rgba($color-wild-watermelon, 0.7);
+      background-color: rgba($color-wild-watermelon, 0.2);
+    }
+  }
+}
 
-      transition: border 0.3s ease;
+.custom-toggle--modal {
+  color: rgba($color-charcoal, 0.9);
 
-      &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
+  .custom-toggle__label {
+    color: rgba($color-charcoal, 0.9);
+  }
 
-        width: 20px;
-        height: 20px;
+  input {
+    &:hover + .custom-toggle__icon-wrapper,
+    &:focus + .custom-toggle__icon-wrapper {
+      border: 1px solid $color-charcoal;
+      background-color: $color-transparent;
+    }
 
-        color: rgba(255, 255, 255, 0);
-
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-
-        transition: color 0.3s ease;
-      }
+    &:disabled + .custom-toggle__icon-wrapper {
+      border: 1px solid rgba($color-mischka, 0.5);
+      background-color: rgba($color-mischka, 0.2);
     }
   }
 
-  input:checked + .custom-toggle__icon {
-    border: 1.5px solid #2c39f2;
+  .custom-toggle__icon-wrapper {
+    border: 1px solid rgba($color-charcoal, 0.3);
 
-    &::before {
-      background-color: #2c39f2;
+    @include vp-767 {
+      top: 0;
+    }
+
+    .custom-toggle__icon {
+      stroke: $color-default-white;
+    }
+  }
+
+
+  input:checked {
+    & + .custom-toggle__icon-wrapper {
+      background-color: $color-cerulean-blue;
+      border: 1px solid $color-cerulean-blue;
+
+      .custom-toggle__icon {
+        stroke: $color-default-white;
+      }
+    }
+
+    &:hover + .custom-toggle__icon-wrapper,
+    &:focus + .custom-toggle__icon-wrapper {
+      background-color: $color-transparent;
+      border: 1px solid $color-charcoal;
+
+      .custom-toggle__icon {
+        stroke: $color-charcoal;
+      }
     }
   }
 
   &.is-invalid {
-    label span {
-      color: #ff1553;
+    .custom-toggle__icon-wrapper {
+      border: 1px solid rgba($color-wild-watermelon, 0.7);
+      background-color: rgba($color-wild-watermelon, 0.2);
     }
   }
-
-  .input-message {
-    position: absolute;
-    right: 0;
-    bottom: -5px;
-
-    &.is-invalid {
-      color: #ff0000;
-    }
-
-    &.is-valid {
-      color: #15ab07;
-    }
-  }
-}*/
+}
