--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -272,6 +272,10 @@
       }
 
     }
+
+    @include vp-767 {
+      font-size: 14px;
+    }
   }
 
   .custom-select__button {
@@ -293,6 +297,10 @@
       & + label {
         color: rgba($color-mischka, 0.6);
       }
+    }
+
+    @include vp-767 {
+      height: 43px;
     }
   }
 
