--- a/source/sass/blocks/custom-toggle.scss
+++ b/source/sass/blocks/custom-toggle.scss
@@ -141,7 +141,7 @@
     border: 1px solid rgba($color-charcoal, 0.3);
 
     @include vp-767 {
-      top: 0;
+      top: 3px;
     }
 
     .custom-toggle__icon {
