--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -42,7 +42,7 @@
     padding: 60px 40px;
 
     @include vp-767 {
-      padding: 60px 16px;
+      padding: 60px 15px;
     }
   }
 
@@ -68,9 +68,13 @@
 
     background-color: $color-default-white;
 
+    @include vp-1199 {
+      padding: 55px 80px 60px 80px;
+    }
+
     @include vp-767 {
       width: 100%;
-      padding: 20px;
+      padding: 37px 15px 40px 15px;
     }
   }
 
@@ -89,8 +93,20 @@
     cursor: pointer;
     color: $color-cerulean-blue;
 
+    @include vp-767 {
+      width: 20px;
+      height: 20px;
+      top: 19px;
+      right: 19px;
+    }
+
     svg {
       transition: all $trans-default;
+
+      @include vp-767 {
+        width: 15px;
+        height: 15px;
+      }
     }
 
     &:hover,
@@ -111,6 +127,8 @@
 
       pointer-events: none;
     }
+
+
   }
 
   &--responsive {
@@ -152,12 +170,35 @@
     color: $color-cerulean-blue;
     margin: 0 0 7px 0;
     text-align: center;
+
+    @include vp-1199 {
+      font-size: 28px;
+      line-height: 28px;
+      margin-bottom: 13px;
+    }
+
+    @include vp-767 {
+      font-size: 18px;
+      line-height: 18px;
+      margin-bottom: 7px;
+    }
   }
 
   p {
     margin: 0 0 20px 0;
     color: $color-charcoal;
     text-align: center;
+
+    @include vp-1199 {
+      line-height: 20px;
+      margin-bottom: 22px;
+    }
+
+    @include vp-767 {
+      font-size: 14px;
+      padding: 0 30px;
+      margin-bottom: 20px;
+    }
   }
 
 }
